Wersja wzbogacona o sekcję projektów. Oraz dwa pierwsze przykładowe projekty.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <a class="nav-link" href="#technologies">Technologie</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Projekty</a>
+              <a class="nav-link" href="#projects">Projekty</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Kontakt</a>
@@ -316,6 +316,77 @@
 
           </div>
 
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="projects">
+    <div class="container">
+      <div class="row d-flex justify-content-center">
+
+        <div class="col-lg-12 flex-wrap justify-content-center">
+          <h2 class="h2 projects-title">Moje projekty</h2>
+          <p class="projects-desc">czyli projekty, które stworzyłem lub brałem udział w ich tworzeniu.</p>
+        </div>
+
+        <!-- PROJECT 01 -->
+        <div class="col-lg-6">
+          <div class="project-card">
+
+            <h4 class="h4 project-title">Elektromedia <span class="project-date">16.12.2019</span></h4>
+            <p class="project-desc">to projekt prostej strony wizytówkowej z wyrożnieniem odnośnika dla przejścia do sklepu.</p>
+
+            <hr class="project-hr">
+
+            <div class="project-img">
+              <div class="project-img project-elektromedia"></div>
+            </div>
+
+            <hr class="project-hr">
+
+            <h4 class="project-technologies-title">technologie użyte w tym projekcie</h4>
+            <div class="project-technologies d-flex">
+              <img src="img/html5-logo.png" alt="" class="project-technology-img">
+              <img src="img/css3-logo.png" alt="" class="project-technology-img">
+              <img src="img/js-logo.png" alt="" class="project-technology-img">
+            </div>
+
+            <div class="project-button-deck">
+              <a href=""><button class="project-button" type="button">Zobacz kod</button></a>
+              <a href=""><button class="project-button" type="button">Podgląd live</button></a>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="col-lg-6">
+          <div class="project-card">
+
+            <h4 class="h4 project-title">Nadchodzący projekt <span class="project-date">00.00.2020</span></h4>
+            <p class="project-desc">to projekt, który już niebawem nadejdzie ponieważ dopiero nad nim pracuję</p>
+
+            <hr class="project-hr">
+
+            <div class="project-img">
+              <div class="project-img project-undone"></div>
+            </div>
+
+            <hr class="project-hr">
+
+            <h4 class="project-technologies-title">technologie użyte w tym projekcie</h4>
+            <div class="project-technologies d-flex">
+              <img src="img/html5-logo.png" alt="" class="project-technology-img">
+              <img src="img/css3-logo.png" alt="" class="project-technology-img">
+              <img src="img/js-logo.png" alt="" class="project-technology-img">
+            </div>
+
+            <div class="project-button-deck">
+              <a href=""><button class="project-button" type="button">Zobacz kod</button></a>
+              <a href=""><button class="project-button" type="button">Podgląd live</button></a>
+            </div>
+
+          </div>
         </div>
       </div>
     </div>
