--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <!-- meta -->
-  <title>Patryk Kowalski</title>
+  <title>Patryk Kowalski - Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- font -->
@@ -11,6 +11,7 @@
   <!-- css -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/stars.css" />
   <link rel="stylesheet" href="css/main.css" />
@@ -40,7 +41,7 @@
               <a class="nav-link" href="#projects">Projekty</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Kontakt</a>
+              <a class="nav-link" href="#contact">Kontakt</a>
             </li>
           </ul>
           <span class="navbar-text">
@@ -56,15 +57,13 @@
 
 
   <section id="main" style="background-image: url('img/main-texture.jpg');">
-    <div class="container">
-      <div class="col-lg-12">
-        <div class="main-wrapper d-flex justify-content-center align-items-center flex-wrap">
+    <div class="container-fluid flex-wrap">
+      <div id="sone" class="col-lg-12 h-100 d-flex justify-content-center align-items-end">
+        <div class="main-wrapper">
           <h2 class="main-title">junior Front-end Developer</h2>
           <h2 class="brand-name">Patryk Kowalski</h2>
 
-          <div class="w-100"></div>
-
-          <a href="#">
+          <a href="#" class="d-flex justify-content-center">
             <div class="button-main">Dowiedz się więcej</div>
           </a>
         </div>
@@ -332,7 +331,7 @@
 
         <!-- PROJECT 01 -->
         <div class="col-lg-6">
-          <div class="project-card">
+          <div data-aos="fade-down" class="project-card">
 
             <h4 class="h4 project-title">Elektromedia <span class="project-date">16.12.2019</span></h4>
             <p class="project-desc">to projekt prostej strony wizytówkowej z wyrożnieniem odnośnika dla przejścia do sklepu.</p>
@@ -354,14 +353,15 @@
 
             <div class="project-button-deck">
               <a href=""><button class="project-button" type="button">Zobacz kod</button></a>
-              <a href=""><button class="project-button" type="button">Podgląd live</button></a>
+              <a href="https://www.elektromedia.com.pl/" target="_blank"><button class="project-button" type="button">Podgląd live</button></a>
             </div>
 
           </div>
         </div>
 
+        <!-- PROJECT 02-->
         <div class="col-lg-6">
-          <div class="project-card">
+          <div data-aos="fade-down" class="project-card">
 
             <h4 class="h4 project-title">Nadchodzący projekt <span class="project-date">00.00.2020</span></h4>
             <p class="project-desc">to projekt, który już niebawem nadejdzie ponieważ dopiero nad nim pracuję</p>
@@ -392,8 +392,34 @@
     </div>
   </section>
 
+  <section id="contact">
+    <div class="container">
+      <div class="row align-items-center justify-content-center">
+        <div class="col-lg-4 d-flex justify-content-center">
+          <div class="application-status on">#OpenToWork</div>
+        </div>
+
+        <div class="col-lg-4 contact-icons d-flex justify-content-around align-items-center">
+          <a target="_blank" href="https://www.linkedin.com/in/patryk-kowalski-93a798172/"><i class="fab fa-linkedin"></i></a>
+          <a target="_blank" href="https://github.com/Pacislavek"><i class="fab fa-github-square"></i></a>
+          <a target="_blank" href="https://www.behance.net/LQS"><i class="fab fa-behance-square"></i></a>
+          <a href="tel:+48791394363"><i class="fas fa-phone-square"></i></a>
+        </div>
+
+        <div class="col-lg-4">
+          <a href="mailto:pacislavek@gmail.com" class="d-flex justify-content-center" target="_blank">
+            <div class="contact-email-button"><i class="fas fa-envelope"></i> Napisz do mnie</div>
+          </a>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
   <script src="js/main.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
   <script>
     AOS.init();
 
