--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
         <span class="navbar-brand" href="#">Patryk Kowalski</span>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="#main">Home</a>
             </li>
             <li class="nav-item">
@@ -54,6 +54,9 @@
     </div>
   </section>
 
+  <section id="scrolltotop">
+    <a href="#main"><button class="button-to-top"><i class="fas fa-arrow-alt-circle-up"></i></button></a>
+  </section>
 
   <section id="main" style="background-image: url('img/main-texture.jpg');">
     <div class="container-fluid flex-wrap">
@@ -418,6 +421,7 @@
   <script src="js/main.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
   <script>
     AOS.init();
