--- a/index.html
+++ b/index.html
@@ -348,9 +348,10 @@
 
             <h4 class="project-technologies-title">technologie użyte w tym projekcie</h4>
             <div class="project-technologies d-flex">
-              <img src="img/html5-logo.png" alt="" class="project-technology-img">
-              <img src="img/css3-logo.png" alt="" class="project-technology-img">
-              <img src="img/js-logo.png" alt="" class="project-technology-img">
+              <img src="img/html5-logo.png" alt="" class="project-technology-img" title="HTML">
+              <img src="img/css3-logo.png" alt="" class="project-technology-img" title="CSS">
+              <img src="img/js-logo.png" alt="" class="project-technology-img" title="Javascript">
+              <img src="img/bootstrap-logo.png" alt="" class="project-technology-img" title="Bootstrap">
             </div>
 
             <div class="project-button-deck">
@@ -364,6 +365,38 @@
         <!-- PROJECT 02-->
         <div class="col-lg-6">
           <div data-aos="fade-down" class="project-card">
+
+            <h4 class="h4 project-title">To do list <span class="project-date">28.08.2020</span></h4>
+            <p class="project-desc">klasyczny projekt to do list, z tworzeniem i usuwaniem elementów.</p>
+
+            <hr class="project-hr">
+
+            <div class="project-img">
+              <div class="project-img project-todolist"></div>
+            </div>
+
+            <hr class="project-hr">
+
+            <h4 class="project-technologies-title">technologie użyte w tym projekcie</h4>
+            <div class="project-technologies d-flex">
+              <img src="img/html5-logo.png" alt="" class="project-technology-img" title="HTML">
+              <img src="img/css3-logo.png" alt="" class="project-technology-img" title="CSS">
+              <img src="img/js-logo.png" alt="" class="project-technology-img" title="Javascript">
+              <img src="img/bootstrap-logo.png" alt="" class="project-technology-img" title="Bootstrap">
+              <img src="img/jquery-logo.png" alt="" class="project-technology-img" title="jQuery">
+            </div>
+
+            <div class="project-button-deck">
+              <a href=""><button class="project-button" type="button">Zobacz kod</button></a>
+              <a href=""><button class="project-button" type="button">Podgląd live</button></a>
+            </div>
+
+          </div>
+        </div>
+
+        <!-- PROJECT 03-->
+        <div class="col-lg-6">
+          <div data-aos="fade-up" class="project-card">
 
             <h4 class="h4 project-title">Nadchodzący projekt <span class="project-date">00.00.2020</span></h4>
             <p class="project-desc">to projekt, który już niebawem nadejdzie ponieważ dopiero nad nim pracuję</p>
