--- a/index.html
+++ b/index.html
@@ -352,6 +352,7 @@
               <img src="img/css3-logo.png" alt="" class="project-technology-img" title="CSS">
               <img src="img/js-logo.png" alt="" class="project-technology-img" title="Javascript">
               <img src="img/bootstrap-logo.png" alt="" class="project-technology-img" title="Bootstrap">
+              <img src="img/photoshop-logo.png" alt="" class="project-technology-img" title="Adobe Photoshop">
             </div>
 
             <div class="project-button-deck">
@@ -367,7 +368,7 @@
           <div data-aos="fade-down" class="project-card">
 
             <h4 class="h4 project-title">To do list <span class="project-date">28.08.2020</span></h4>
-            <p class="project-desc">klasyczny projekt to do list, z tworzeniem i usuwaniem elementów.</p>
+            <p class="project-desc">klasyczny projekt to do list z tworzeniem i usuwaniem elementów.</p>
 
             <hr class="project-hr">
 
